fix: tighten list spacing

--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -238,6 +238,7 @@
   list-style-type: none;
   padding-left: 0;
   margin-left: 1rem;
+  margin-top: 0.5em;
   margin-bottom: 1.75em;
   line-height: 1.75;
 }
@@ -251,7 +252,7 @@
 .prose ul li {
   position: relative;
   padding-left: 0.125rem;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
 }
 
 .prose ul li:last-child {
@@ -280,6 +281,7 @@
   list-style-position: outside;
   padding-left: 0;
   margin-left: 1.25rem;
+  margin-top: 0.5em;
   margin-bottom: 1.75em;
   counter-reset: item;
 }
@@ -288,7 +290,7 @@
   display: block;
   position: relative;
   padding-left: 0.125rem;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.25em;
 }
 
 .prose ol li:last-child {
